[package]
name = "audio-forward"
version = "0.1.0"
authors = ["jaccobkii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7.0"
dirs = "2.0.2"
toml = "0.5.0"
serde = "1.0"
serde_derive = "1.0.104"
ctrlc = "3.1.3"
clap = "2.33.0"
rprompt = "1.0"